--- a/papers.html
+++ b/papers.html
@@ -9,7 +9,7 @@
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 22]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Stateful Greybox Fuzzing
-		( <a href="https://arxiv.org/pdf/2204.02545.pdf">PDF</a> )</b></p>
+		( <a href="pdf/Sec22-SGF.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jinsheng Ba, Marcel Boehme, Zahra Mirzamomen, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">31st USENIX Security Symposium 2022.</p> 
 	
