--- a/students.htm
+++ b/students.htm
@@ -118,7 +118,7 @@ Systems for Programming Education (support for multiple target languages).</font
 <a href="gao.jpg">
 <img border="2" src="gao_small.jpg" xthumbnail-orig-image="gao.jpg"></a><p>
 	<font face="Arial" size="2">
-	<b><a href="http://www.comp.nus.edu.sg/~gaoxiang">Xiang Gao</a></b>, PhD 
+	<b><a href="https://gaoxiang9430.github.io/">Xiang Gao</a></b>, PhD 
 	thesis on <i><a href="Students/GaoXiang.pdf">Over-fitting in Program Repair and Synthesis</a></i>, 
 Graduated 2021, Associate Professor, Beihang University (from 2022).</font><p>
 <a href="sergey.jpg">
