--- a/papers.html
+++ b/papers.html
@@ -25,7 +25,7 @@
 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA22]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Vulnerability Repair via Inductive Inference ( <a href="pdf/ISSTA22.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Vulnerability Repair via Inductive Inference ( <a href="https://www.comp.nus.edu.sg/~abhik/pdf/ISSTA22.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Xiang Gao, Gregory J. Duck, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM International Symposium on Software Testing and Analysis (ISSTA) 2022.</p>
 	 
