--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 <li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
-		Thanks to <i>Oracle Labs</i> for their generous donation to support 
-		our research on <i>program repair for security</i>.</font></p>
-	<br>	<li>
+		<a href = "https://cs3213-fse.github.io/">Software engineering project course infra-structure</a>: intelligent tutoring system based on program repair. Let me know if you 
+		are interested in adopting it for teaching at your university !
+	<br>	
+		
+		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
