--- a/teaching.html
+++ b/teaching.html
@@ -20,8 +20,9 @@
 		<p><b><font face="Arial" size="2" color="#800080">Courses Taught</font></b><font face="Arial" size="2" color="#800080"><b>&nbsp;at 
 		NUS&nbsp; </b></font></p>
 		<ul>
-			<li><font face="Arial" color="#800080" size="2">CS3213 Foundations 
-			of Software Engineering in 2021-22 and 2022-23. </font></li>
+			<li><font face="Arial" color="#800080" size="2">
+				<a href="https://cs3213-fse.github.io/"><b>CS3213 Foundations 
+					of Software Engineering</b></a> in 2021-22 and 2022-23. </font></li>
 			<li><font face="Arial" size="2" color="#800080">CS4211 Formal 
 			Methods in Software Engineering in 2017-18, 2018-19, 2019-20, 
 			2020-21,2021-22 (<b><a href="CS4218-4239/CS4211-2020-NUS-LessonPlan.pdf">Lesson 
