--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
-		<a href = "https://cs3213-fse.github.io/">Software engineering project course infra-structure</a>: intelligent tutoring system based on program repair. Let me know if you 
-		are interested in adopting it for teaching at your university !</font></p>
+		<a href = "https://cs3213-fse.github.io/">Software engineering project course </a>: intelligent tutoring system based on program repair. 
+		Let me know if you are interested in adopting it for teaching!</font></p>
 	<br>	
 		
 		<li>
