--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<b><font face="Arial" size="4" color="#800080">Newsflash!!</font></b></p>
+	<b><font face="Arial" size="4" color="#800080">Newsflash!</font></b></p>
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
@@ -58,9 +58,13 @@
 <li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
-		<a href = "https://cs3213-fse.github.io/">Software engineering project course </a>: intelligent tutoring system based on program repair. 
+		<a href = "https://cs3213-fse.github.io/">Software engineering project course</a>: intelligent tutoring system based on program repair. 
 		Let me know if you are interested in adopting it for teaching!</font></p>
 	<br>	
+	
+	<font face="Arial">      	 	         	 	   
+		Thanks to Oracle Labs for their generous donation towards our research on program repair for security.</font></p>
+	<br>
 		
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
