--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 		<a href = "https://cs3213-fse.github.io/">Software engineering project course</a>: intelligent tutoring system based on program repair. 
 		Let me know if you are interested in adopting it for teaching!</font></p>
 	<br>	
-	
+
+	<li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
 		Thanks to Oracle Labs for their generous donation towards our research on program repair for security.</font></p>
 	<br>
