--- a/students.htm
+++ b/students.htm
@@ -100,14 +100,16 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 <hr>
 
   <p><b><font face="Arial" size="5" color="#800080">Final year undergraduate</font></b><font face="Arial" color="#800080" size="5"><b> Students 
-	Advised</b></font><p><a href="jon.jpg">
-
-<b>Christopher Goh Zhen Fung</b>
+	Advised</b></font>
 	
+	  <br>
+	<b>Christopher Goh Zhen Fung</b>
+	<br>
 <b>Eris Jacey Masagaca</b>
-	
+	<br>
 <b>Ethan Noah Rozario</b>
-	
+	<br>
+	<p><a href="jon.jpg">
 <img border="2" src="jon_small.jpg" xthumbnail-orig-image="jon.jpg"></a><p>
 <font face="Arial" size="2"><b>Jon Chua</b>, Design of Intelligent Tutoring 
 Systems for Programming Education.</font><p>
