--- a/students.htm
+++ b/students.htm
@@ -103,12 +103,18 @@ student), <i>Concurrent system Fuzzing</i> (tentative topic).</font></p>
 	Advised</b></font>
 	
 	  <br>
-	<b>Christopher Goh Zhen Fung</b>
+	  <b><font face="Arial" size="2">Christopher Goh Zhen Fung</font></b>
 	<br>
-<b>Eris Jacey Masagaca</b>
+	  <b><font face="Arial" size="2">Eris Jacey Masagaca</font></b>
 	<br>
-<b>Ethan Noah Rozario</b>
+	  <b><font face="Arial" size="2">Ethan Noah Rozario</font></b>
 	<br>
+	  
+	 <p><a href="Zhenxin.jfif">
+<img border="2" src="Zhenxin.fif"></a><p>
+<font face="Arial" size="2"><b>Zhenxin Huang</b>, Design of Intelligent Tutoring 
+Systems for Programming Education.</font><p>
+	  
 	<p><a href="jon.jpg">
 <img border="2" src="jon_small.jpg" xthumbnail-orig-image="jon.jpg"></a><p>
 <font face="Arial" size="2"><b>Jon Chua</b>, Design of Intelligent Tutoring 
