--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 
 <ul>
 <li><font face="Arial">
-	<a href="projects/Repair/index.html">Program Repair</a>&nbsp;</font></li>
+	<a href="projects/Repair/index.html">Program Repair</a>&nbsp;
+	<b> <a href="https://nus-apr.github.io">RESEARCH PROGRAM (2022-27)</a></b>
+	</font></li>
 	<li><font face="Arial">
 	<a href="projects/Fuzz">Fuzz testing and Symbolic Execution</a></font></li>
 
