--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <ul>
 <li><font face="Arial">
 	<a href="projects/Repair/index.html">Program Repair</a>&nbsp;
-	<b> (<a href="https://nus-apr.github.io">RECENT (22-27)</a>)</b>
+	<b> <a href="https://nus-apr.github.io">RECENT (22-27)</a></b>
 	</font></li>
 	<li><font face="Arial">
 	<a href="projects/Fuzz">Fuzz testing and Symbolic Execution</a></font></li>
