--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 		2022-27.</p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
-		<a href="https://www.cnrsatcreate.cnrs.fr/research/">Descartes: Intelligent Modeling for Decision Making in Critical Urban 
+		<a href="https://descartes.cnrsatcreate.cnrs.fr/">Descartes: Intelligent Modeling for Decision Making in Critical Urban 
 		Systems</a>, 2021-26.</p>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left"> 	
