--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
-		Thanks to Oracle Labs for their generous donation towards our research on program repair for security.</font></p>
+		Please submit papers to <a href = "https://isoft.acm.org/isec2023/">ISEC 2023</a>, deadline September 15, 2023.</font></p>
 	<br>
 		
 		<li>
