--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
 		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;is in Singapore, 
-		please attend, see you all in November 2022.</font></p>
+			please attend, see you all <b> 14-18 November 2022.</b></font></p>
 
 <br>
 	
