--- a/papers.html
+++ b/papers.html
@@ -46,7 +46,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Umair Z. Ahmed, Zhiyu Fan, 
 	Jooyong Yi, O Al-Bataineh, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software 
-	Engineering and Methodology (TOSEM), To appear (2022).</p>
+	Engineering and Methodology (TOSEM), 31(4), 2022.</p>
 	 
 	 <br>
 	
