--- a/students.htm
+++ b/students.htm
@@ -18,9 +18,9 @@
 	
 	<font face="Arial" color="#800080" size="5"><b>Research Pages </b></font>
 <ul>
-<li><a href ="https://abhikrc.com/projects/Repair/index.html"> Automated Program Repair</a>
+	<li><a href ="https://abhikrc.com/projects/Repair/index.html"> <b>Automated Program Repair</b></a>
 	
-<li> <a href = "https://abhikrc.com/projects/Fuzz/"> Fuzzing and Symbolic Execution</a>
+	<li> <a href = "https://abhikrc.com/projects/Fuzz/"><b>Fuzzing and Symbolic Execution</b></a>
 
 </ul>
 	
