--- a/students.htm
+++ b/students.htm
@@ -18,9 +18,9 @@
 	
 	<font face="Arial" color="#800080" size="5"><b>Research Pages </b></font>
 <ul>
-	<li><a href ="https://abhikrc.com/projects/Repair/index.html"> <b>Automated Program Repair</b></a>
+	<li><a href ="https://abhikrc.com/projects/Repair/index.html"> <b><font face="Arial" size="4">Automated Program Repair</font></b></a>
 	
-	<li> <a href = "https://abhikrc.com/projects/Fuzz/"><b>Fuzzing and Symbolic Execution</b></a>
+	<li> <a href = "https://abhikrc.com/projects/Fuzz/"><b><font face="Arial" size="4">Fuzzing and Symbolic Execution</font></b></a>
 
 </ul>
 	
