--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<font face="Arial" size="2">Provost's Chair Professor <br> 
 			<a href="https://www.comp.nus.edu.sg/cs/">Department of Computer Science</a><br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
-		<br>
+		<br><font face="Arial" size="2">
 		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">TSS<a><br>
 		<a href="https://sgcsc.sg">SGCSC</a><br>
 		<a href="https://nus-plse.github.io">PLSE@NUS</a><br>
 			<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
-			<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Secure-SW group</a>
+			<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Secure-SW group</a></font>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
