--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<p align="center">&nbsp;</p>
 	<hr>    			  			 	 	<p style="margin-top: 0; margin-bottom: 0">  	&nbsp;<p style="margin-top: 0; margin-bottom: 0" align="left">  	 	
 	<b><font face="Arial" size="4"><a href="AbhikCVshort.pdf">[CV]</a>
-	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="students.htm">[STUDENTS]</a> <a href="research.html"> 	[RESEARCH]</a>&nbsp;<a href="papers.html">[PUBLICATIONS]</a>
+	<a href="teaching.html">[TEACHING]</a>&nbsp;<a href="students.htm">[TEAM]</a> <a href="research.html"> 	[RESEARCH]</a>&nbsp;<a href="papers.html">[PUBLICATIONS]</a>
 	<a href="tools.html">[TOOLS]</a>&nbsp; <a href="service.html">[SERVICE]</a>&nbsp;&nbsp; 	
 	</font></b>
 	<font face="Arial" size="4" color="#800080">      	 	<b> 	 	 	<p style="margin-top: 0; margin-bottom: 0" align="left"> &nbsp;</p>      	 	 	</b></font><p style="margin-top: 0; margin-bottom: 0">  	 	 	
