--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			<a href="https://www.comp.nus.edu.sg/cs/">Department of Computer Science</a><br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<br><font face="Arial" size="2">
+		<a href="https://nus-apr.github.io/">APR</a><br>
 		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">TSS</a><br>
 		<a href="https://sgcsc.sg">SGCSC</a><br>
 		<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
