--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
 	</font>   		
 
 
-	<p><font face="Arial">Software systems, software engineering, trustworthy 
-	systems (<i><a href="https://www.youtube.com/watch?v=3j3vonnBTac">overview talk</a></i>).<br>
+	<p><font face="Arial">Software testing and analysis, Software security, Trustworthy systems (<i><a href="https://www.youtube.com/watch?v=3j3vonnBTac">overview talk</a></i>).<br>
 		At present, my research group is actively engaged in research on the following topics.</font></p>
 
 <ul>
