--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a></font></H3>
 		<br><font face="Arial" size="2">
 		<a href="https://nus-apr.github.io/">APR</a><br>
-		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">TSS</a><br>
-		<a href="https://sgcsc.sg">SGCSC</a><br>
+		<a href="https://www.comp.nus.edu.sg/~nsoe-tss">NSoE-TSS</a><br>
 		<a href ="https://descartes.cnrsatcreate.cnrs.fr/">Descartes</a><br>
 		<a href="https://nus-plse.github.io">PLSE@NUS</a><br>
 		<a href ="https://abhikrc.com/students.htm">Secure-SW group</a></font>
@@ -61,6 +60,12 @@
 			please attend, see you all <b> 14-18 November 2022.</b></font></p>
 
 <br>
+			<li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left">
+	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
+	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
+	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.
+		<br>
 	
 <li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
@@ -69,21 +74,6 @@
 		Let me know if you are interested in adopting it for teaching!</font></p>
 	<br>	
 
-
-	
-	<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
-	<font face="Arial">      	 	         	 	   
-		Please submit papers to <a href = "https://isoft.acm.org/isec2023/">ISEC 2023</a>, deadline <b>September 15, 2022</b>.</font></p>
-	<br>
-		
-		<li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
-	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
-	<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.
-		
-		<br><br>
 			
 		<li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 
 	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
