--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 		<li>
 		Recent developments:<ul>
 			<li><i>[Mar22]&nbsp; </i>
-			Honored to receive IEEE Technical Committee of Software Engineering New Directions Award, jointly with 
+			Honored to receive IEEE TCSE New Directions Award, jointly with 
 				<a href ="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, 
 				for contributions to symbolic execution used for test generation and program repair.
 			
