--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
-		<span style="font-weight: 400"><i>abhik at 
-	u.nus.edu, dcsar at nus.edu.sg</i></span></font></H3>            			</blockquote>       </DIV></TD>      		 	
+		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i></span></font></H3>            			
+		</blockquote>       </DIV></TD>      		 	
 	<TD width="266" bgcolor="#FFFFFF">        		<p align="center"> 	 		 	&nbsp;</p>
 	<p align="center"> 	 		 	
 	<img border="0" src="abhik-pictures/s-light.JPG" width="256" height="249"></p> 			<p align="center"> 	 		&nbsp;</p></TD>   </TR></TBODY></TABLE>     	
