--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 		to know about our work (another <b> <a href="Videos/AbhikISSTA21Panel.mp4">
 		video</a>)</b>.</font></p>
 	
-	<br>	
+	<br>	<li>
+		Giving an education class on Fuzz Testing and Program Repair of Security Vulnerabilities
+		at Embedded Systems Week 2022 (<a href = "https://esweek.org/education-ec7"> details</a>).
+		
+		
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
