--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
 		to know about our work (another <b> <a href="Videos/AbhikISSTA21Panel.mp4">
 		video</a>)</b>.</font></p>
 	
-	<br>	<li>
-		Giving an education class on Fuzz Testing and Program Repair of Security Vulnerabilities
-		at Embedded Systems Week 2022 (<a href = "https://esweek.org/education-ec7"> details</a>).
 		
 		
 		<li>
@@ -62,8 +59,12 @@
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
 		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;is in Singapore, 
 			please attend, see you all <b> 14-18 November 2022.</b></font></p>
-
-<br>	
+			
+		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
+		<font face="Arial">
+		Giving an education class on Fuzz Testing and Program Repair of Security Vulnerabilities
+		at Embedded Systems Week 2022 (<a href = "https://esweek.org/education-ec7"> details</a>).
+		</font></p>	
 			
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
