--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<br>
 		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-		Giving an education class on Fuzz Testing and Program Repair of Security Vulnerabilities
+		Giving an education class on Fuzz Testing and Program Repair 
 		at Embedded Systems Week 2022 (<a href = "https://esweek.org/education-ec7"> details</a>).
 		</font></p>	
 			
