--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<br>
 		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-		Giving an education class on Fuzz Testing and Program Repair 
-		at Embedded Systems Week 2022 (<a href = "https://esweek.org/education-ec7"> details</a>).
+		Giving an <a href = "https://esweek.org/education/">education class at Embedded Systems Week 2022</a>
+		on Fuzz Testing and Program Repair (<a href = "https://esweek.org/education-ec7"> details</a>).
 		</font></p>	
 			
 		<br><li>
