--- a/papers.html
+++ b/papers.html
@@ -10,7 +10,8 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Efficient Greybox Fuzzing to Detect Memory Errors
 		( <a href="pdf/ASE22.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jinsheng Ba, Gregory J Duck, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">37th IEEE/ACM International Conference on Automated Software Engineering (ASE) 2022.</p> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">37th IEEE/ACM International Conference on Automated Software Engineering (ASE) 2022, 
+		<font color="#FF0000"><b>Distinguished Paper Award</b></font></p> 
 	
 	 
 	 
