--- a/projects/Fuzz/index.html
+++ b/projects/Fuzz/index.html
@@ -132,8 +132,10 @@ Van Thuan Pham, Manh-Dung Nguyen, Abhik Roychoudhury<br>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE Transactions on Software 
 	Engineering, 47(9), 2021. </p>
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Linear-time Temporal Logic 	guided Greybox Fuzzing ( <a href="../../pdf/ICSE22-LTLFuzz.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Zhen Dong, 	Jialin Li, Ivan Beschastnikh, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Linear-time Temporal Logic 
+	guided Greybox Fuzzing ( <a href="../../pdf/ICSE22-LTLFuzz.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Zhen Dong, 
+	Jialin Li, Ivan Beschastnikh, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM 44th International 
 	Conference on Software Engineering (ICSE) 2022.</p>
 	</font>
@@ -244,10 +246,28 @@ being recruited) [March 2011]</li><br>
 <td colspan="2"><h2><a name="publications">All Publications:</a></h2>
 <font face="Arial">
 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASE 22]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Efficient Greybox Fuzzing to Detect Memory Errors
+		( <a href="pdf/ASE22.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jinsheng Ba, Gregory J Duck, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">37th IEEE/ACM International Conference on Automated Software Engineering (ASE) 2022, 
+		<font color="#FF0000"><b>Distinguished Paper Award</b></font></p> 
+	
+	 
+	 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 22]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Stateful Greybox Fuzzing
+		( <a href="pdf/Sec22-SGF.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Jinsheng Ba, Marcel Boehme, Zahra Mirzamomen, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">31st USENIX Security Symposium 2022.</p> 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE22]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Linear-time Temporal Logic 	guided Greybox Fuzzing ( <a href="../../pdf/ICSE22-LTLFuzz.pdf">PDF</a> )</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Zhen Dong, 	Jialin Li, Ivan Beschastnikh, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Linear-time Temporal Logic 
+	guided Greybox Fuzzing ( <a href="../../pdf/ICSE22-LTLFuzz.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ruijie Meng, Zhen Dong, 
+	Jialin Li, Ivan Beschastnikh, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM 44th International 
 	Conference on Software Engineering (ICSE) 2022.</p>
 <font face="Arial" size="2"> 
