--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<br>
 		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-		Giving an <a href = "https://esweek.org/education/">education class at Embedded Systems Week 2022</a>
-		on Fuzz Testing and Program Repair (<a href = "https://esweek.org/education-ec7"> details</a>).
+		Gave an <a href = "https://esweek.org/education/">education class at Embedded Systems Week 2022</a> on Fuzz Testing and 
+			Program Repair (<b><a href = "https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b>).
 		</font></p>	
 			
 		<br><li>
