--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
-		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i></span></font></H3>            			
+		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i>
+			<br> Admin: Chee Yong Neo  <i>neocy@nus.edu.sg</i></span></font></H3>            			
 		</blockquote>       </DIV></TD>      		 	
 	<TD width="266" bgcolor="#FFFFFF">        		<p align="center"> 	 		 	&nbsp;</p>
 	<p align="center"> 	 		 	
