--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i>
-			<br> Admin Asst: Neo Chee Yong, <i>neocy at nus.edu.sg</i>	
+			<br><br>Admin Asst: Neo Chee Yong
+			<br><i>neocy at nus.edu.sg</i>	
 		</span></font></H3>            			
 		</blockquote>       </DIV></TD>      		 	
 	<TD width="266" bgcolor="#FFFFFF">        		<p align="center"> 	 		 	&nbsp;</p>
