--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>dcsar at nus.edu.sg, abhik at u.nus.edu</i>
-			<br><br>Admin contact:
+			<br><br><u>Admin contact</u>:
 			<br> Neo Chee Yong
 			<br><i>neocy at nus.edu.sg</i>	
 		</span></font></H3>            			
