--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -256,10 +256,19 @@
 	<img src="1589000373177_small.jpg" alt="Yuntong Zhang" xthumbnail-orig-image="https://media-exp1.licdn.com/dms/image/C5603AQEZUUmGY-gDYg/profile-displayphoto-shrink_200_200/0/1589000373177?e=1632960000&amp;v=beta&amp;t=yRZcjG4VnZyLJ-qAQ6Kjb8v-8fGriHyB6yjxeXTZB2c" border="2"></a></p>
 	<p><b><font face="Arial">Yuntong Zhang (PhD student &amp; Research Assistant)</font></b></p>
 	<hr><hr>
+	
 	<p><u><b><font size="6" face="Arial">Publications</font></b></u></p>
 <font face="Arial">
-
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Book]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Repair (Available on request)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Synthesis Lectures on Software Engineering, Morgan Claypool Publishers, 2022.</p>   <font face="Arial" size="2"> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	</font>    	
 	
+	
+	<p><u><b><font size="6" face="Arial">Publications</font></b></u></p>
+<font face="Arial">
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Vulnerability Repair via Inductive Inference ( <a href="../../pdf/ISSTA22.pdf">PDF</a> )</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Xiang Gao, Gregory J. Duck, Abhik Roychoudhury</p>
