--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -260,9 +260,10 @@
 	<p><u><b><font size="6" face="Arial">Publications</font></b></u></p>
 <font face="Arial">
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Book]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Repair (Available on request)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Repair</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Synthesis Lectures on Software Engineering, Morgan Claypool Publishers, 2022.</p>   <font face="Arial" size="2"> 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Synthesis Lectures on Software Engineering, Morgan Claypool Publishers, 2022.<br>
+	<i> Email abhik@comp.nus.edu.sg to access (portions of) the book for teaching and research. </i></p>   <font face="Arial" size="2"> 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	</font>    	
 	
