--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 	<ul>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
-		<font face="Arial">Watch the <b><a href="https://vimeo.com/369403234">
+		<font face="Arial">
+			<a href = "https://arxiv.org/abs/2211.12787"> <b>A new survey on Program Repair</b> </a> is available   (Nov 2022). 	
+		Watch the <b><a href="https://vimeo.com/369403234">
 		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> 
-		to know about our work (another <b> <a href="Videos/AbhikISSTA21Panel.mp4">
-		video</a>)</b>.</font></p>
+		to know about our work.
+		</font></p>
 	
 		
 		<br>
