--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
 		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;is in Singapore, 
-			please attend, see you all <b> 14-18 November 2022.</b></font></p>
+	        thank you to all who attended <b> 14-18 November 2022.</b></font></p>
 		
 			<br>
 		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
@@ -77,7 +77,7 @@
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
 	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
-		<a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</p>
+        Grant launch <a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</p>
 		
 			<br>
 		<li>
