--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 		<br><li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-	<a href="https://nus-apr.github.io">Automated Program Repair</a> (2022-27):&nbsp;
-        Grant launch <a href="projects/Repair/T3/MoET32022.pdf">Post-doctoral positions available</a>.</p>
+		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
+		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> just happened</p>
 		
 			<br>
 		<li>
