--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
 		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;is in Singapore, 
 	        thank you to all who attended <b> 14-18 November 2022.</b> Please attend <a href =</font></p>
+			
+			<br><li>
+		<p style="margin-top: 0; margin-bottom: 0" align="left">
+	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
+		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
+		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> just happened</p>
 		
 			<br>
 		<li><p style="margin-top: 0; margin-bottom: 0" align="left">
@@ -73,27 +79,21 @@
 			Program Repair (<b><a href = "https://www.youtube.com/watch?v=Y2JkW4LjdUA">VIDEO</a></b>).
 		</font></p>	
 			
-		<br><li>
-		<p style="margin-top: 0; margin-bottom: 0" align="left">
-	<font face="Arial">Ministry of Education (MoE) Tier 3 program on
-		<a href="https://nus-apr.github.io"><b>Automated Program Repair</b></a> (2022-27). 
-		<a href = "https://nus-apr.github.io/launch-event/">Grant launch</a> just happened</p>
+	<br><li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 
+	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
+			
+			
+			</font></p>
 		
+			
+			
 			<br>
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 	<font face="Arial">      	 	         	 	   
 		<a href = "https://cs3213-fse.github.io/">Software engineering project course</a>: intelligent tutoring system based on program repair. 
 		Let me know if you are interested in adopting it for teaching!</font></p>
-	<br>	
-
-			
-		<li> Honored to receive <a href=" https://tc.computer.org/tcse/awards/">IEEE TCSE New Directions Award 
-	<a/> in recognition of contributions to symbolic execution for test generation and program repair (joint with Cristian Cadar).
-			
-			
-			</font></p>
-		
+	
 
 	</ul>
  	 	
