--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@
 	 
 	 
 	 
-	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
 	 
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
