--- a/papers.html
+++ b/papers.html
@@ -23,7 +23,7 @@
 	 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[FM 23]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Efficient SMT-based Network Fault Tolerant Verification </b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Efficient SMT-based Network Fault Tolerance Verification </b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yu Liu, Pavle Subotic, Emmanuel Letier, Sergey Mechtaev and Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">25th International Symposium on Formal Methods (FM), 2023.</p> 
 	 
