--- a/projects/Fuzz/index.html
+++ b/projects/Fuzz/index.html
@@ -245,6 +245,15 @@ being recruited) [March 2011]</li><br>
 <td width="0"></td>
 <td colspan="2"><h2><a name="publications">All Publications:</a></h2>
 <font face="Arial">
+	
+	
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Usenix Security 23]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Bleem: Packet Sequence Oriented Fuzzing for Protocol Implementations 
+		</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">
+		Zhengxiong Luo, Junze Yu, Feilong Zuo, Jianzhong Liu, Yu Jiang, Ting Chen, Abhik Roychoudhury, Jiaguang Sun</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Usenix Security Symposium 2023. </p> 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ASE 22]</b></p>
