--- a/projects/Repair/index.html
+++ b/projects/Repair/index.html
@@ -259,13 +259,23 @@
 	
 	<p><u><b><font size="6" face="Arial">Publications</font></b></u></p>
 <font face="Arial">
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[Book]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Repair</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Synthesis Lectures on Software Engineering, Morgan Claypool Publishers, 2022.<br>
-	<i> Email abhik@comp.nus.edu.sg to access (portions of) the book for teaching and research. </i></p>   <font face="Arial" size="2"> 
+	
+	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	</font>    	
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Program Repair
+		( <a href="https://arxiv.org/pdf/2211.12787.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Xiang Gao, Yannic Noller, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">arxiv Report 2211.12787, Nov 2022.
+		<font color="#FF0000"><b>New Survey on Program Repair</b></font></p> 
+	 
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE23]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Automated Repair of Code from Language Models
+		( <a href="https://arxiv.org/pdf/2205.10583.pdf">PDF</a> )</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhiyu Fan, Xiang Gao, Martin Mirchev, Abhik Roychoudhury, Shin Hwei Tan</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE/ACM International Conference on Software Engineering (ICSE) 2023. </p> 
+	
 	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ISSTA]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Program Vulnerability Repair via Inductive Inference ( <a href="../../pdf/ISSTA22.pdf">PDF</a> )</b></p>
