--- a/index.html
+++ b/index.html
@@ -101,28 +101,21 @@
 	&nbsp;</p>
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
-	<font face="Arial">Abhik Roychoudhury is a 
-	Provost's Chair Professor of Computer Science at the National University of 
-	Singapore, where he has been since 2001 after receiving his Ph.D. in 
-	Computer Science from the State University of New York at Stony Brook in 
-	2000. He is the Director of the <a href="https://www.comp.nus.edu.sg/~nsoe-tss/">National Satellite of 
-		Excellence in Trustworthy Software Systems</a> at Singapore (2019-23). He has also helped set up the <a href="https://sgcsc.sg">Singapore 
-		Cyber-security Consortium </a>, which is a consortium of 25 companies 
-	in the cyber-security space engaging with academia for research and 
-	collaboration. Abhik's research focuses on software testing and analysis, 
-	software security and trust-worthy software construction. His research team is known for contributions to 
-	<i>automated program repair</i>, and <i>fuzz testing</i>. Abhik is a member of 
-	the Steering committee of the flagship conferences in Software Engineering, 
-	International Conference on Software Engineering (ICSE) and Symposium on 
-	Foundations of Software Engineering (FSE). He has served as an Associate Editor of IEEE Transactions on 
-	Software Engineering (TSE), IEEE Transactions on Dependable and Secure Computing (TDSC) and ACM 
-	Transactions on Software Engineering and Methodology (TOSEM). His former doctoral 
-	students have been placed all over the world as academics 
-	(Peking University, University College London, Max-Planck Institute, 
-	University of Melbourne, Beihang University, SUSTech, SUTD).</font></p>
+	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
+		where he has been since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
+		in 2000. He is the Director of the National Satellite of Excellence in Trustworthy Software Systems at Singapore. 
+		He has also helped set up the Singapore Cyber-security Consortium in 2016, which is a consortium of 25 companies in the 
+		cyber-security space engaging with academia for research and collaboration. 
+		Abhik's research focuses on software testing and analysis, software security and trust-worthy software construction. 
+		Abhik is a member of the Steering committee of the flagship conferences in Software Engineering, 
+		International Conference on Software Engineering (ICSE) and Symposium on Foundations of Software Engineering (FSE). 
+		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
+		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
+		for contributions to symbolic execution as well as its usage in software testing and program repair. </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
- 	 	
+		
+	
 
 	 	
 
