--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	<font face="Arial"> Abhik Roychoudhury is a Provost's Chair Professor of Computer Science at the National University of Singapore, 
-		where he has been since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
+		where he has been working since 2001 after receiving his Ph.D. in Computer Science from the State University of New York at Stony Brook 
 		in 2000. He is the Director of the National Satellite of Excellence in Trustworthy Software Systems at Singapore. 
 		He has also helped set up the Singapore Cyber-security Consortium in 2016, which is a consortium of 25 companies in the 
 		cyber-security space engaging with academia for research and collaboration. 
