--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-			<a href = "https://arxiv.org/abs/2211.12787"> <b>A new survey on Program Repair</b> </a> is available   (Nov 2022). 	
+			<a href = "https://arxiv.org/abs/2211.12787"> <b> Work on program repair gets International Conference on Software Engineering (ICSE) 2023 
+				Most Influential paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis" (co-authors: Nguyen, Qi, Chandra).
+				<ul>
+					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
 		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> 
 		to know about our work.
+				</ul>
 		</font></p>
 	
 		
@@ -112,7 +116,8 @@
 		International Conference on Software Engineering (ICSE) and Symposium on Foundations of Software Engineering (FSE). 
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
-		for contributions to symbolic execution as well as its usage in software testing and program repair. </font></p>
+		for contributions to symbolic execution as well as its usage in software testing and program repair. 
+		The work on program repair received the ICSE 2023 Most Influentual paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
