--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial">
-			<a href = "https://arxiv.org/abs/2211.12787"> <b> Work on program repair gets International Conference on Software Engineering (ICSE) 2023 
-				Most Influential paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis" (co-authors: Nguyen, Qi, Chandra).
+			Work on program repair gets International Conference on Software Engineering (ICSE) 2023 
+		Most Influential paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis" (co-authors: Nguyen, Qi, Chandra).
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
