--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 				<ul>
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
-		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> 
-		to know about our work.
+		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from our article in Communications of the ACM.
 				</ul>
 		</font></p>
 	
