--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
 				</ul>
 		</font></p>
 	
-		
-		<br>
+	
 		<li>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Arial" color="#800080"><a href="https://2022.esec-fse.org">
-		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;is in Singapore, 
+		<b>ESEC-FSE 2022</b> </a></font><font face="Arial">&nbsp;was in Singapore, 
 	        thank you to all who attended <b> 14-18 November 2022.</b> </font></p>
 			
 			<br><li>
