--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		His former doctoral students have been placed all over the world as academics (University College London, Max-Planck Institute, 
 		University of Melbourne, Beihang University). His research was honored with IEEE TCSE New Directions Award in 2022 (jointly with Cristian Cadar) 
 		for contributions to symbolic execution as well as its usage in software testing and program repair. 
-		The work on program repair received the ICSE 2023 Most Influentual paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
+		The work on program repair received the ICSE 2023 Most Influentual Paper Award for ICSE2013 paper "SemFix: Program Repair via Semantic Analysis". </font></p>
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
 	&nbsp;</p>   	 
 		
