--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 					<li>
 		Watch the <b><a href="https://vimeo.com/369403234">
 		video</a> </b>on <b><a href="projects/Repair/index.html">program repair</a></b> from our article in Communications of the ACM.
+					<li>	 	         	 	   
+		<a href = "https://cs3213-fse.github.io/">A project course</a> building intelligent tutoring system based on program repair. 
 				</ul>
 		</font></p>
 	
